# assemblylift-demo-nextjs-aws

./: .gitignore  README.md  assemblylift.toml
frontend/www/: package-lock.json  package.json
frontend/www/pages/: index.js
frontend/www/styles/: Home.module.css
services/www/: service.toml
services/www/counter/: handler.rb  io.rb
services/www/server/: Cargo.toml
services/www/server/src/: main.rs
user_tf/: mod.tf
user_tf/function-policy/: mod.tf
