[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = "0.13"
direct-executor = "0.3.0"
flate2 = "1"
mime_guess = "2"
rust-embed = "6"
serde = "1"
serde_json = "1"
asml_core = { version = "0.4.0-alpha", package = "assemblylift-core-guest" }
assemblylift_core_io_guest = { version = "0.4.0-alpha", package = "assemblylift-core-io-guest" }
http = { package = "assemblylift-iomod-http-guest", version = "0.3.1" }
